3.3.2
-----------------------------------------------------------
* Added new class RangedSwappingMutationOperator, thanx
  to Florian
* Added package description to equalDistribution package
* Fixed bug in GABreeder with preservation of fittest,
  thanx to Oscar
* Enhanced CrossOver class: full x-over selected by default
* Added new unit tests
* Added one-file PDF documentation, thanx to Denis
* Equipped MapGene and SetGene with fast trove4j maps
* Made all tests for MapGene and SetGene pass
* Enhanced Javadoc, fixed spelling errors

3.3.1
-----------------------------------------------------------
* Introduced mutation of Genetic Programming commands
* Utilized XStream library for serialization issues
* Utilized trove4J: fast and consistent map replacement
* Integrated Robocode 1.5 with JGAP
* Added cloning capabilities to many RobocodeJGAP commands
* Fitness value of original chromosome is set to clone when
  cloning the chromosome
* Enabled cloning of application data in genes
* Moved method niceMemory from GPGenotype to SystemKit
* Made class IComplexCommand serializable
* Added execute_object() to ForLoop
* Fixed output of generation number in GPGenotype.evolve()
* Briefer log messages in GPGenotype
* Added default constructor to GPFitnessFunction
* Renamed all auxiliary test classes from xxxForTest to
  xxxForTesting
* Fixed Maven pom file (thanx to Fabian)
* Enhanced Genotype tests to check for unique chromosomes

3.3
-----------------------------------------------------------
* Integrated Robocode 1.4.8 with JGAP
* Added persistent representations of GPPopulation,
  GPProgram, ProgramChromosome and CommandGene
* Enhanced interface IProgramCreator
* GPProgram: added a growOrFull method for initializing
  programs with given chromosomes
* CommandGene: added service method ensureUniqueness
* Now infinity is not accepted as a fitness value
* New method getAssignableFromClass in BaseGPChromosome
* New interface IComplexCommand for declaring GP commands